Change default worker user folder to /home/node
Updated README, values.yaml, and deployment template
Aligns N8NUSERFOLDER with container base image location

--- a/charts/n8n/templates/deployment.worker.yaml
+++ b/charts/n8n/templates/deployment.worker.yaml
@@ -112,7 +112,7 @@ spec:
                 name: {{ tpl ($name | toString) $ }}
             {{- end }}
           {{- end }}
-          {{- $workerUserFolder := default "/home/runner" .Values.worker.userFolder }}
+          {{- $workerUserFolder := default "/home/node" .Values.worker.userFolder }}
           {{- $mergedExtraEnv := include "n8n.renderMergedExtraEnv" (dict "global" .Values.global.extraEnv "component" .Values.worker.extraEnv "context" $) }}
           {{- if or $workerUserFolder $mergedExtraEnv }}
           env:
