--- a/charts/powerdns-recursor/Chart.yaml
+++ b/charts/powerdns-recursor/Chart.yaml
@@ -8,6 +8,9 @@ keywords:
   - dns
   - powerdns
   - recursor
-home: https://www.powerdns.com/
+home: https://github.com/klicktipp/helm-charts
+icon: https://avatars.githubusercontent.com/u/1282630?s=200&v=4
 sources:
   - https://github.com/PowerDNS/pdns
+  - https://www.powerdns.com
+  - https://www.powerdns.com/powerdns-recursor
