--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -3,9 +3,9 @@ apiVersion: v2
 name: rabbitmq-cluster
 description: Helm chart to define a RabbitMQ cluster via official rabbitmq.com CRDs (RabbitmqCluster).
 type: application
-version: "3.0.2"
+version: 3.0.2
 # renovate: datasource=docker depName=rabbitmqoperator/cluster-operator
-appVersion: "2.19.0"
+appVersion: 2.19.0
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
 icon: https://avatars.githubusercontent.com/u/96669?s=200&v=4
 sources:
