--- a/charts/rabbitmq-topology/Chart.yaml
+++ b/charts/rabbitmq-topology/Chart.yaml
@@ -3,9 +3,9 @@ apiVersion: v2
 name: rabbitmq-topology
 description: Helm chart to manage RabbitMQ topology resources via RabbitMQ Topology Operator CRDs.
 type: application
-version: "1.0.1"
+version: 1.0.1
 # renovate: datasource=docker depName=rabbitmqoperator/messaging-topology-operator
-appVersion: "1.18.2"
+appVersion: 1.18.2
 home: https://www.rabbitmq.com/kubernetes/operator/using-topology-operator
 icon: https://avatars.githubusercontent.com/u/96669?s=200&v=4
 sources:
