--- a/charts/klicktipp-common/Chart.yaml
+++ b/charts/klicktipp-common/Chart.yaml
@@ -3,4 +3,4 @@ name: klicktipp-common
 description: A Helm library chart for KlickTipp common templates
 type: library
 version: 1.0.0
-appVersion: "1.0.0"
+appVersion: 1.0.0
