--- a/charts/proxysql/Chart.yaml
+++ b/charts/proxysql/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v1
-appVersion: "2.7.1"
+appVersion: 2.7.1
 description: ProxySQL Helm chart for Kubernetes
 name: proxysql
 version: 1.1.1
